force-app/main/default/objects/Utilization_Snapshot__c/fields/Exclude_From_Missing_Timecards__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Missing_Timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Missing Timecards</label>
    <type>Checkbox</type>
</CustomField>