force-app/main/default/objects/Utilization_Snapshot__c/fields/Productive_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Productive_Utilization__c</fullName>
    <label>Productive Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>