force-app/main/default/objects/Utilization_Snapshot__c/fields/Project_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Project_Utilization__c</fullName>
    <label>Project Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>