force-app/main/default/objects/Utilization_Snapshot__c/fields/Utilization_Target_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Target_Attainment__c</fullName>
    <label>Utilization Target Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>